api-server-go/deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: formalogix
  labels:
    name: formalogix
